--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
+    --breakpoint-xs: 475px;
+    
     --font-sans:
         'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
